[package]
name = "day-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = { version = "1.1.2", features = ["std"] }
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
regex = "1.10.2"
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3.3.1"
