[package]
name = "day-two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3.3.1"
